packages/swift/AlgoModels/Frameworks/algo_models.xcframework/ios-arm64_x86_64-simulator/Headers/algo_modelsFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
typedef struct ForeignBytes
{
    int32_t len;
    const uint8_t *_Nullable data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
RustBuffer uniffi_algo_models_ffi_fn_func_attach_signature(RustBuffer encoded_tx, RustBuffer signature, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_algo_models_ffi_fn_func_get_encoded_transaction_type(RustBuffer bytes, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_algo_models_ffi_rustbuffer_alloc(uint64_t size, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_algo_models_ffi_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *_Nonnull out_status
);
void ffi_algo_models_ffi_rustbuffer_free(RustBuffer buf, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_algo_models_ffi_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *_Nonnull out_status
);
void ffi_algo_models_ffi_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_algo_models_ffi_rust_future_cancel_u8(uint64_t handle
);
void ffi_algo_models_ffi_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_algo_models_ffi_rust_future_complete_u8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_algo_models_ffi_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_algo_models_ffi_rust_future_cancel_i8(uint64_t handle
);
void ffi_algo_models_ffi_rust_future_free_i8(uint64_t handle
);
int8_t ffi_algo_models_ffi_rust_future_complete_i8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_algo_models_ffi_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_algo_models_ffi_rust_future_cancel_u16(uint64_t handle
);
void ffi_algo_models_ffi_rust_future_free_u16(uint64_t handle
);
uint16_t ffi_algo_models_ffi_rust_future_complete_u16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_algo_models_ffi_rust_future_poll_i16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_algo_models_ffi_rust_future_cancel_i16(uint64_t handle
);
void ffi_algo_models_ffi_rust_future_free_i16(uint64_t handle
);
int16_t ffi_algo_models_ffi_rust_future_complete_i16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_algo_models_ffi_rust_future_poll_u32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_algo_models_ffi_rust_future_cancel_u32(uint64_t handle
);
void ffi_algo_models_ffi_rust_future_free_u32(uint64_t handle
);
uint32_t ffi_algo_models_ffi_rust_future_complete_u32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_algo_models_ffi_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_algo_models_ffi_rust_future_cancel_i32(uint64_t handle
);
void ffi_algo_models_ffi_rust_future_free_i32(uint64_t handle
);
int32_t ffi_algo_models_ffi_rust_future_complete_i32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_algo_models_ffi_rust_future_poll_u64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_algo_models_ffi_rust_future_cancel_u64(uint64_t handle
);
void ffi_algo_models_ffi_rust_future_free_u64(uint64_t handle
);
uint64_t ffi_algo_models_ffi_rust_future_complete_u64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_algo_models_ffi_rust_future_poll_i64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_algo_models_ffi_rust_future_cancel_i64(uint64_t handle
);
void ffi_algo_models_ffi_rust_future_free_i64(uint64_t handle
);